--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ var playerY = 0;
 var room;
 var roomID;
 var monsters;
+var me;
 
 var wsClient = new WSClient();
 //----------------- Global-Var END ------------------
@@ -62,7 +63,7 @@ function random() {
 
 //----------------- Network START ------------------
 function wsSyncPosition () {
-    wsTalk("syncPos", {x: players[playerID].x, y: players[playerID].y});
+    wsTalk("syncPos", {x: me.x, y: me.y});
 }
 
 function wsTalk(cmd, data) {
@@ -145,13 +146,13 @@ function cbSyncPos (data) {
 
 //----------------- Timer START ------------------
 function timerSyncPosition () {
-    if (players[playerID].animations.currentAnim.isPlaying) {
+    if (me.animations.currentAnim.isPlaying) {
         return;
     }
 
-    if (players[playerID].x != playerX || players[playerID].y != playerY) {
-        playerX = players[playerID].x;
-        playerY = players[playerID].y;
+    if (me.x != playerX || me.y != playerY) {
+        playerX = me.x;
+        playerY = me.y;
         wsSyncPosition();
     }
 }
@@ -217,6 +218,7 @@ function createPlayers() {
         }
         createPlayer(index, margin);
     }
+    me = players[playerID];
 }
 
 function createMonsters() {
@@ -273,18 +275,18 @@ function updatePhysics () {
 function updateControls () {
     cursors = game.input.keyboard.createCursorKeys();
     if (cursors.left.isDown) {
-        players[playerID].body.velocity.x = -150;
-        players[playerID].animations.play('left');
+        me.body.velocity.x = -150;
+        me.animations.play('left');
     } else if (cursors.right.isDown) {
-        players[playerID].body.velocity.x = 150;
-        players[playerID].animations.play('right');
+        me.body.velocity.x = 150;
+        me.animations.play('right');
     } else {
-        players[playerID].animations.stop();
-        players[playerID].frame = 4;
+        me.animations.stop();
+        me.frame = 4;
     }
 
-    if (cursors.up.isDown && players[playerID].body.touching.down) {
-        players[playerID].body.velocity.y = -350;
+    if (cursors.up.isDown && me.body.touching.down) {
+        me.body.velocity.y = -350;
     }
 }
 
